--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
