--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
+
+spring.application.name=inventory-service
+server.port=0
+eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
